# dataforge-studio

./: .env.example  .gitignore  AGENT_CHAT_UI_SETUP.md  CORRECTED_STUDIO_ACCESS.md  FRONTEND_COMPLETE.md  FRONTEND_SETUP.md  Makefile  QUICK_START.md  README.md  docker-compose.yml  environment.yml  start-backend.sh  start-frontend.sh  start.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/: Dockerfile  chat_server.py  check_bedrock.py  pyproject.toml  pytest.ini  requirements.txt  test_zero_shot.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  document_agent.py  orchestrator.py  replication_agent.py  schema_agent.py  tools.py
backend/app/api/: routes_chat.py  routes_documents.py  routes_generation.py  routes_replication.py  routes_streaming.py
backend/app/core/: auth.py  config.py  streaming.py
backend/app/models/: __init__.py  requests.py  responses.py
backend/app/services/: jobs.py
backend/app/services/generation/: __init__.py  documents.py  sdv_wrapper.py  structured.py
backend/app/services/parsers/: __init__.py  db_schema.py  document.py  openapi.py
backend/app/services/pii/: __init__.py  detector.py  replacer.py
backend/app/utils/: __init__.py  retry.py  streaming.py
backend/src/: __init__.py  agent.py  chat_agent.py
backend/tests/: README.md  __init__.py  conftest.py  test_agents.py  test_api.py  test_core_capabilities.py  test_services.py
docs/: architecture.md  auth_plan.md  aws_quotas.md  aws_setup.md  deployment.md  langgraph_setup.md  langsmith_chat_ui.md  zero_shot_architecture.md
frontend/: ARCHITECTURE.md  (+5 more)
(+37 files in other folders)
